# lazy-investor

./: .gitignore  README.md  package-lock.json
.github/workflows/: test-stock-service.yml
attached_assets/: Pasted-Goal-Create-the-frontend-for-a-Lazy-Investor-Dashboard-_1768732773099.txt
client/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  setupTests.ts
client/src/api/: analyse.ts  index.ts  news.ts  stocks.ts  types.ts  utils.ts
client/src/components/: StockDataPrefetcher.tsx  ai-briefing-card.tsx  dashboard-layout.tsx  (+2 more)
script/: vnstock.ipynb  vnstock_test.py
server/: ANALYSIS_SERVICE_REFACTORING.md  QUICKSTART.md  RATE_LIMITING.md  README.md  migrate_db.py  pyproject.toml  requirements.txt  uvicorn.sh
server/app/: main.py
server/app/api/: __init__.py  deps.py
server/app/api/v1/: __init__.py
server/app/api/v1/routes/: __init__.py  analysis.py  news.py  stocks.py
server/app/core/: __init__.py  config.py
server/app/db/: __init__.py  models.py  session.py
server/app/models/: __init__.py  schemas.py
server/app/services/: __init__.py  analysis_service.py  analysis_service.py.old  news_service.py  stocks_service.py
server/app/services/analysis/: README.md  __init__.py  article_analyzer.py  legacy_api.py  summary_generator.py
server/app/utils/: stock_utils.py
server/app/workers/: __init__.py  news_analyzer.py
server/scripts/: analysis_result_HPG.json  news_script.py  test_analysis_service.py  test_news_api.py
server/tests/: test_news_api.py  test_stocks_api.py
(+15 files in other folders)
