[tool.poetry]
name = "stock-me-2"
version = "0.1.0"
description = "A FastAPI application for stock data management"
authors = ["Your Name <youremail@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.0"
pydantic = "^1.9.0"
httpx = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"